# myhealthteam

./: .env.example  .gitignore  ACTUAL_PROBLEM_ANALYSIS.md  ANALYTICS_APP_README.md  AUTH_ISSUE_RESOLUTION.md  BILLING_CLEANUP_EXECUTION_REPORT.md  BILLING_DASHBOARDS_QUICKSTART.md  BILLING_DASHBOARDS_README.md  BILLING_DATA_STATUS_SUMMARY.md  BILLING_DUPLICATES_FIX_SUMMARY.md  BILLING_DUPLICATES_ROOT_CAUSE.md  CI_CD_DEV_RECOMMENDATIONS.md  CLAUDE.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETED.md  CLEANUP_STATUS_REPORT.txt  COMPREHENSIVE BILLING SYSTEM REPORT.md  CONSOLIDATED_SYSTEM_DOCUMENTATION.md  COORDINATOR_DASHBOARD_FIX_SUMMARY.md  DATABASE_HEALTH_CHECK_README.md  DATABASE_UPLOAD_SOLUTION.md  DATASETTE_README.md  DATA_GAP_ANALYSIS_PLAN.md  DATA_TRACEABILITY_DOCUMENTATION.md  DEPLOY_WORKFLOW_FIX.md  FEATURE_REQUESTS.md  GOOGLE_OAUTH_SETUP.md  HHC_VIEW_AT_A_GLANCE.txt  HHC_VIEW_CHANGES_SUMMARY.txt  HHC_VIEW_DAILY_EXPORT_ROADMAP.md  HHC_VIEW_DUPLICATE_FIX.md  HHC_VIEW_FINAL_STATUS.txt  HHC_VIEW_QUICK_START.md  HHC_VIEW_REFERENCE_CARD.md  HHC_VIEW_STATUS_FILTER_SUMMARY.txt  HHC_VIEW_TEMPLATE_IMPLEMENTATION.md  HHC_VIEW_UPDATED_VISIBILITY.md  IDE_BRANCH_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING_COLUMNS_ROOT_CAUSE_ANALYSIS.md  (+302 more)
.github/: copilot-instructions.md
.serena/: project.yml
_do_not_use_old_scripts/: 4_transform_and_validate.ps1
backups/: backup_log.txt  hourly_backup_log.txt
code-sync/: .gitignore  README.md  sync-to-production.ps1
configs/: data_mappings.yaml
db-sync/: CI_CD_DEPLOYMENT.md  DAILY_SYNC_SCHEDULE.md  README.md  VPS2_MIGRATION_STRATEGY.md  test_remote.ps1  test_ssh.ps1
docs/: #1-PROJECT_REFACTOR_2_PLAN.md  ADMIN_DASHBOARD_PERFORMANCE_OPTIMIZATION.md  BILLING_IMPLEMENTATION_PLAN.md  BILLING_VS_PAYROLL_SEPARATION.md  BILLING_WORKFLOW_ARCHITECTURE.md  Billing Report Missing Minutes of Service Column  CI_CD_MAIN_RECOMMENDATIONS.md  CMLog_Data_Transfer_URGENT.md  CMLog_EXECUTION_GUIDE.md  CONSOLIDATED_SYSTEM_DOCUMENTATION.md  DECEMBER_2025_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_INDEX.md  Enhanced_Workflow_Implementation_COMPLETED.md  HHC_VIEW_ACTIVE_PATIENTS_FIX.md  HHC_VIEW_DOCUMENTATION_INDEX.md  HHC_VIEW_PROJECT_COMPLETE.md  HHC_VIEW_QUERY_UPDATED.md  HHC_VIEW_STATUS_FILTER.md  HHC_VIEW_SUMMARY.md  HHC_VIEW_TECHNICAL_SPEC.md  LIVING_REFERENCE_DOC.MD  Living Refernce Doc.md  Server_Inventory.md  (+45 more)
sandbox/oauth_reference/oauth_module/: .dockerignore  .env.template  DEPLOYMENT_GUIDE.md  Dockerfile  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  app.yaml  cloudbuild.yaml  deploy-appengine.ps1  deploy-cloudrun.ps1  deploy-with-env.ps1  gcp-setup.ps1  main.py  oauth-config-guide.md  oauth_module.py  pyproject.toml  requirements-production.txt  requirements.txt  setup-custom-domain.ps1  setup.py  streamlit_app.py  streamlit_app_production.py  test_integration.py  update-oauth-redirect.ps1
sandbox/oauth_reference/oauth_module/examples/: advanced_app.py  simple_app.py
sandbox/oauth_reference/oauth_module/google_oauth_streamlit/: __init__.py  oauth_module.py  streamlit_ui.py
(+1050 files in other folders)
